# TeensyAudio-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  sine_tone.hex
.github/workflows/: ci.yml
examples/: Cargo.toml
examples/src/: graph_synth.rs  line_in_passthrough.rs  sine_tone.rs
planning/: debug-no-audio.md  overview.md  phase0-hal-prerequisites.md  phase1-core-framework.md  phase2-io-drivers.md  phase2.5-integration-tests.md  phase3-sgtl5000-driver.md  phase4-dsp-nodes.md  phase5-integration.md
teensy-audio/: Cargo.toml
teensy-audio/src/: constants.rs  control.rs  graph.rs  lib.rs  node.rs
teensy-audio/src/block/: mod.rs  pool.rs  ref_types.rs
teensy-audio/src/codec/: mod.rs  registers.rs  sgtl5000.rs
teensy-audio/src/dsp/: helpers.rs  intrinsics.rs  mod.rs  wavetables.rs
teensy-audio/src/graph/: mod.rs  verification_tests.rs
teensy-audio/src/io/: input_i2s.rs  integration_tests.rs  interleave.rs  mod.rs  output_i2s.rs  play_queue.rs  record_queue.rs  spsc.rs
teensy-audio/src/nodes/: amplifier.rs  analyze_peak.rs  analyze_rms.rs  effect_envelope.rs  effect_fade.rs  mixer.rs  mod.rs  synth_dc.rs  synth_sine.rs
